--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Universla media shortcut key",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [
     "commands",
