--- a/manifest.json
+++ b/manifest.json
@@ -1,72 +1,107 @@
 {
-  "description": "control media with shortcuts",
   "manifest_version": 2,
-  "name": "shmeordtciaut",
-  "version": "1.3",
+  "name": "schmidts katz",
+  "version": "1.0",
+  "description": "control media with shortcuts",
   "icons": {
     "128": "icons/icon128.png"
+  },
+  "browser_action": {
+    "default_icon": "icons/icon128.png",
+    "default_title": "Schmidts katz",
+    "default_popup": "popup.html"
   },
   "background": {
     "scripts": ["background.js"]
   },
-  "browser_action": {
-    "default_icon": "icons/icon128.png",
-    "default_title": "Shmeordtciaut",
-    "default_popup": "popup.html"
-  },
   "commands": {
     "play-pause": {
       "suggested_key": {
-        "default": "MediaPlayPause"
+        "default": "Ctrl+Alt+D"
       },
       "description": "Toggle play/pause"
     },
-    "play-next": {
-      "suggested_key": {
-        "default": "MediaNextTrack"
-      },
-      "description": "Play next track"
-    },
-    "play-prev": {
-      "suggested_key": {
-        "default": "MediaPrevTrack"
-      },
-      "description": "Play previous track"
-    },
-    "mute": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+2",
-        "mac": "MacCtrl+Shift+2"
-      },
-      "description": "Toggle mute"
-    },
     "stop": {
       "suggested_key": {
-        "default": "MediaStop"
+        "default": "Ctrl+Alt+C"
       },
       "description": "Stop all players"
     },
-    "like": {
-      "description": "Toggle like"
-    },
-    "dislike": {
-      "description": "Toggle dislike"
-    },
-    "forward5": {
+    "forward": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+F"
+      },
       "description": "Seek forward"
     },
-    "backward5": {
+    "backward": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+S"
+      },
       "description": "Seek backwards"
     },
+    "play-prev": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+A"
+      },
+      "description": "Play previous track"
+    },
+    "play-next": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+G"
+      },
+      "description": "Play next track"
+    },
+    "toggle-mute": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+E"
+      },
+      "description": "Toggle mute"
+    },
     "volume-up": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+R"
+      },
       "description": "Increase volume"
     },
     "volume-down": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+W"
+      },
       "description": "Decrease volume"
+    },
+    "playback-rate-increase": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+B"
+      },
+      "description": "Increases playback speed"
+    },
+    "playback-rate-decrease": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+Y"
+      },
+      "description": "Decrease playback speed"
+    },
+    "like": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+V"
+      },
+      "description": "Toggle like"
+    },
+    "dislike": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+X"
+      },
+      "description": "Toggle dislike"
     }
   },
+  "content_scripts": [
+    {
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["abstract_controller.js", "controller/youtube_controller.js"]
+    }
+  ],
   "permissions": [
-    "tabs",
+    "activeTab",
     "nativeMessaging"
   ]
 }
