--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "shmeordtciaut",
+  "name": "schmidts-katz",
   "version": "0.0.1",
-  "description": "Universla media shortcut key",
-  "main": "index.js",
+  "description": "Universl media shortcut key",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "prepare": "make prepare"
   },
   "keywords": [
     "commands",
@@ -13,10 +11,11 @@
   ],
   "author": "Cubimon",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/cubimon/Schmidt-s-Katz.git"
+  },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "@fortawesome/fontawesome-free": "^5.11.2"
   }
 }
