remove redundant braces alias document.querySelector add title finish popup using fontawesome font instead of svgs (may be optimized later to reduce size)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Universl media shortcut key",
   "scripts": {
-    "prepare": "node prepare.js"
+    "prepare": "make prepare"
   },
   "keywords": [
     "commands",
