--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
     "default_title": "Schmidt's Katz",
     "default_popup": "popup/popup.html"
   },
+  "applications": {
+    "gecko": {
+      "id": "schmidts_katz@cubimon.org"
+    }
+  },
   "background": {
     "scripts": ["background.js"]
   },
