new js based build system to drop make dependency

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fortawesome/fontawesome-free": "^5.11.2"
   },
   "dependencies": {
+    "archiver": "^3.1.1",
+    "glob": "^7.1.6",
     "mpris-service": "^2.1.0"
   }
 }
