--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "archiver": "^3.1.1",
+    "crx": "^5.0.1",
     "glob": "^7.1.6",
-    "mpris-service": "^2.1.0"
+    "mpris-service": "^2.1.0",
+    "selenium-webdriver": "^4.0.0-alpha.5"
   }
 }
