--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Schmidt's Katz",
-  "version": "1.3",
+  "version": "1.4",
   "description": "control media with shortcuts",
   "icons": {
     "128": "icons/icon128.png"
@@ -144,6 +144,15 @@
       "js": [
         "abstract_controller.js",
         "controller/spotify_controller.js"
+      ]
+    },
+    {
+      "matches": [
+        "*://www.netflix.com/watch/*"
+      ],
+      "js": [
+        "abstract_controller.js",
+        "controller/netflix_controller.js"
       ]
     }
   ],
