--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "url": "git://github.com/cubimon/Schmidt-s-Katz.git"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0"
-  },
-  "dependencies": {
-    "dbus-next": "^0.8.2",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "geckodriver": "^1.19.1",
-    "mpris-service": "^2.1.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "web-ext": "^4.3.0"
+  },
+  "dependencies": {
+    "mpris-service": "^2.1.0"
   }
 }
